--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 :root{
     --navBarHeight: 4rem;
-    --navMainColor: #fff;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 /* ======== reset ======== */
 body{
     position: relative;
@@ -19,7 +20,7 @@ a{
     text-decoration: none;
 }
 a:visited{
-    color: var(--navMainColor);
+    color: #fff;
 }
 
 /* ======== Top bar ======== */
@@ -34,16 +35,9 @@ a:visited{
 .top-bar > a {
     text-decoration: none;
     letter-spacing: 0.1rem;
-    color: var(--navMainColor);
+    color: #fff;
 }
-/* -----------------------------ZARAZ USUN----------------------------- */
-.zaraz-usun{
-    display: inline;
-    background-color: #fff;
-    color: rgba(0, 0, 0);
-    padding: 0 1rem;
-}
-/* -----------------------------ZARAZ USUN----------------------------- */
+
 /* ======== Nav bar ======== */
 .nav-bar{
     position: relative;
@@ -52,7 +46,7 @@ a:visited{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 5rem;
-    background-color: var(--navMainColor);
+    background-color: #fff;
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
     z-index: 10;
 }
@@ -73,7 +67,7 @@ a:visited{
     border: 2px solid rgb(92, 92, 92);
     border-radius: 0.5rem;
     color: rgb(92, 92, 92);
-    background-color: var(--navMainColor);
+    background-color: #fff;
     overflow: hidden;
     transition: 0.2s;
 }
@@ -102,7 +96,7 @@ a:visited{
     flex-direction: column;
     text-align: center;
     position: absolute;
-    background-color: var(--navMainColor);
+    background-color: #fff;
     z-index: 3;
     transform: translateY(-100%);
     transition: 0.4s;
@@ -112,7 +106,6 @@ a:visited{
 
 
 /* ======== Image Carousel ======== */
-
 .casel-container{
     position: relative;
     width: 100%;
@@ -213,29 +206,28 @@ a:visited{
     width: 60%;
     margin: 0 auto 1.5rem auto;
 }
-.casel-img-container button{
+.r-b-btn{
     color: #fff;
     font-size: 1rem;
     padding: .7rem 1rem;
     margin: 0 .5rem;
     border: hidden;
 }
-.casel-img-container button:hover{
+.r-b-btn:hover{
     cursor: pointer;
     text-shadow: 0px 0px 2px #ccc;
 }
-.casel-img-container button:focus{
+.r-b-btn:focus{
     outline: none !important;
 }
-.casel-img-container .red-btn{
+.red-btn{
     background-color: #922519;
 }
-.casel-img-container .blue-btn{
+.blue-btn{
     background-color: #4475a9;
 }
 
 /* ======== Header ======== */
-
 header{
     text-align: center;
     margin: 3rem auto;
@@ -251,19 +243,17 @@ header hr{
     margin: 0 auto;
 }
 
-
 /* ======== 3 column section ======== */
 .three-column-section-container{
     display: flex;
+    justify-content: center;
     margin: 0 auto;
     width: 90%;
     padding: 1rem;
-
 }
 .three-column-section-container div{
     flex-shrink: 1;
     padding: 1rem;
-    
 }
 .three-column-section-container img{
     width: 100%;
@@ -290,41 +280,214 @@ header hr{
     background-color: rgba(172, 224, 246, 0.5);
 }
 
-
-
 /* ======== Fixed Background & Emoji ======== */
-
+    /* Fixed Background */
+.fix-background-and-emoji-container{
+    margin: 5rem 0 5rem 0;
+}
 .fixed-background-container{
-    height: 2rem;
     width: 100%;
     background-color: rgb(0, 94, 78);
-    transition: 2s;
+    transition: .5s;
+    background-image: url("./img/matrix.jpg");
+    background-size: cover;
+    background-attachment: fixed;
 }
-.fixed-background-container:hover{
+.fixed-background-container div{
+    padding: 5rem 0 5rem 0;
+    text-align: center;
+    color: #eee;
+    text-shadow: 2px 2px 3px #000;
+}
+.fixed-background-container h2{
+    font-size: 2.5rem;
+}
+.fixed-background-container h4{
+    font-size: 2rem;
+}
+    /* Emoji collapse */
+.emoji{
+    display: block;
+    padding: .5rem 0;
+    text-align: center;
+    background-image: linear-gradient(270deg, #922519, #4475a9);
+}
+.emoji-top{
+    height: .5rem;
+}
+.emoji i{
+    color: #fff;
+    font-size: 2rem;
+    transition: 1s;
+    animation-name: plugEmoji;
+    animation-duration: 6s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+@keyframes plugEmoji{
+    0%   { transform: scale(1,1)      translateY(0); }
+    2%  { transform: scale(1.1,.9)   translateY(0); }
+    7%  { transform: scale(.9,1.1)   translateY(-10px); }
+    12%  { transform: scale(1.05,.95) translateY(0); }
+    16%  { transform: scale(1,1.1)      translateY(-8px); }
+    23%  { transform: scale(1.1,0.9)      translateY(0); }
+    25%  { transform: scale(1.1,0.9)      translateY(0); }
+    100% { transform: scale(1,1)      translateY(0); }
+}
+.emoji-collapse{
+    height: 0rem;
+    transition: .5s;
+    overflow: hidden;
+    border-bottom: 2px solid #ccc;
+}
+.emoji-collapse-inner{
+    display: flex;
+    padding: 0;
+    margin: 0 auto;
+    width: fit-content;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.emoji-collapse img{
     height: 15rem;
-    background-color: rgba(0, 54, 58, 0.432);
+    margin: 0 auto;
+}
+    /* Emoji popup */
+.popup-emoji{
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    z-index: 101;
+    width: auto;
+    height: 15rem;
+    transition: .4s;
+    visibility: hidden;
+}
+.popup-background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0;
+    z-index: 100;
+    transition: .4s;
+    visibility: hidden;
+}
+
+/* Two Column Section */
+.two-column-section-container{
+    margin: 0 auto;
+    display: flex;
+    width: 90%;
+    max-width: 100rem;
+    color: #303134;
+}
+.two-column-section-container div{
+    width: 35%;
+    padding: 1rem;
+    align-self: center;
+}
+.two-column-section-container h1{
+    font-size: 3rem;
+    font-weight: 800;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.two-column-section-container p{
+    margin: 2rem 0;
+}
+.two-column-section-container a{
+    margin-top: 0;
+    border: 3px solid #303134;
+    padding: .5rem;
+    transition: .5s;
+}
+.two-column-section-container a:hover{
+    background-color:#303134;
+    color: #fff;
+    cursor: pointer;
+}
+.two-column-section-container img{
+    width: 65%;
+}
+
+/* Jumbotron section */
+.jumbotron-section-container{
+    display: flex;
+    justify-content: space-around;
+    margin: 3rem 0 2rem 0;
+    padding: 3rem;
+    background-color: #E8E9EE;
+}
+.jumbotron-section-container a{
+    height: 100%;
+    align-self: center;
+    padding: 1rem;
+    color: #fff;
+    background-color: #3E70A2;
+}
+
+/* Footer section */
+footer{
+    background-color: #303134;
+    padding: 6rem 10rem 4rem 10rem;
+    text-align: center;
+}
+footer img{
+    height: 5rem;
+}
+footer p{
+    color: #fff;
+}
+footer ul{
+    list-style-type:none;
+    padding-left: 0;
+}
+footer li{
+    display: inline;
+}
+footer li a{
+    padding: 0 1rem 0 1rem;
+    font-size: 2.5rem;
+}
+.fa-facebook:hover{
+    color: #3B5998;
+}
+.fa-twitter:hover{
+    color: #1DA1F2;
+}
+.fa-instagram:hover{
+    background: -webkit-linear-gradient(45deg, #833AB4, #c13584, #F56040, #FCAF45);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.fa-youtube:hover{
+    color: #FF0000;
+}
+
+/* socket */
+.socket{
+    background-color: #222;
+    text-align: center;
+    border-top: 1px solid #4981b3;
+    padding: 2rem;
 }
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (min-width:850px) and (max-width:1730px){
+    .emoji-collapse-inner{
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+}
 @media(max-width:1100px){
     .nav-btn{
         display: inline-block;
@@ -339,6 +502,7 @@ header hr{
     .casel-img-container div{
         visibility: hidden;
     }
+    /* 3 column section */
     .three-column-section-container{
         flex-wrap: wrap;
         width: 70%;
@@ -346,8 +510,27 @@ header hr{
     .three-column-section-container div:nth-child(n+2){
         margin-top: 2rem;
     }
+    /* 2 column section */
+    .two-column-section-container{
+        flex-wrap: wrap;
+    }
+    .two-column-section-container div{
+        margin: 0 auto;
+        width: 70%;
+    }
+    .two-column-section-container img{
+        width: 70%;
+        margin: 3rem auto;
+    }
+    /* jumbotron */
+    .jumbotron-section-container{
+        flex-wrap: wrap;
+        justify-content: start;
+    }
+    footer{
+        padding: 4rem 4rem 2rem 4rem;
+    }
 }
-
 @media(max-width:500px){
     .top-bar{
         text-align: center;
@@ -356,5 +539,93 @@ header hr{
     }
     .nav-bar{
         justify-content: center;
+    }
+    header h1{
+        font-size: 2rem;
+    }
+    header h4{
+        font-size: 1rem;
+    }
+    /* 3 column section */
+    .three-column-section-container{
+        width: 100%;
+        padding: 0;
+    }
+    .three-column-section-container div{
+        padding: 0;
+    }
+    .three-column-section-container h4, .three-column-section-container p, .three-column-section-container button{
+        margin-left: 1rem;
+    }
+    /* fixed backgroun & emoji */
+    .fix-background-and-emoji-container{
+        margin: 5rem 0 5rem 0;
+    }
+    .fixed-background-container div{
+        padding: 3rem 0 3rem 0;
+    }
+    .fixed-background-container h2{
+        font-size: 2rem;
+    }
+    .fixed-background-container h4{
+        font-size: 1.5rem;
+    }
+    .emoji-collapse-inner{
+        margin: 0;
+    }
+    .emoji-collapse img{
+        height: auto;
+        width: 100%;
+    }
+    .popup-emoji{
+        width: 100%;
+        height: auto;
+    }
+    /* 2 column section */
+    .two-column-section-container{
+        margin: 0;
+        width: 100%;
+    }
+    .two-column-section-container div{
+        width: 100%;
+        padding: 1rem;
+    }
+    .two-column-section-container h1{
+        font-size: 2.5rem;
+    }
+    .two-column-section-container img{
+        width: 100%;
+    }
+    /* jumbotron section */
+    .jumbotron-section-container{
+        display: flex;
+        justify-content: flex-start;
+        margin: 0;
+        padding: 1rem;
+        background-color: #E8E9EE;
+    }
+    .jumbotron-section-container a{
+        height: 100%;
+        align-self: center;
+        padding: 1rem;
+        color: #fff;
+        background-color: #3E70A2;
+    }
+    /* footer */
+    footer{
+        padding: 1rem;
+    }
+    footer img{
+        height: 3rem;
+    }
+    footer p{
+        text-align: start;
+        margin-left: 0;
+    }
+    footer li a{
+        padding: 0 .5rem 0 .5rem;
+    }
+    .socket{
+        padding: 1rem;
     }
 }
